board title fix cut off text

--- a/app/assets/stylesheets/userBoradGrid.scss
+++ b/app/assets/stylesheets/userBoradGrid.scss
@@ -55,6 +55,7 @@
     font-weight: 600;
     color: black;
     padding-left: 7px;
+    padding-bottom: 3px;
     width: 240px;
     text-overflow: ellipsis;
     white-space: nowrap;
